src/objects/ER_Store__c.object
<CustomObject>
    <fields>
        <fullName>ER_Creation_Date_In_OS__c</fullName>
        <description>Used as a reference for EDG data creation</description>
        <label>Creation Date In OS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Last_Date_Of_Sync__c</fullName>
        <label>Last Date Of Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CZ_Verified_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Association_member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Association member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Association_name__c</fullName>
        <label>Association name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_BUPicklist__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Card Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Closure_Date__c</fullName>
        <label>Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Closure_Reason__c</fullName>
        <label>Closure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transformation of Company - noticed by Merchant</fullName>
                </value>
                <value>
                    <fullName>Termination of Merchant activities - no written notice</fullName>
                </value>
                <value>
                    <fullName>Termination of Merchant activities - noticed</fullName>
                </value>
                <value>
                    <fullName>Cancellation of Contract - by Merchant</fullName>
                </value>
                <value>
                    <fullName>Cancellation of Contract - by ER</fullName>
                </value>
                <value>
                    <fullName>Cancellation of Contract - Legal reasons</fullName>
                </value>
                <value>
                    <fullName>Doesn’t accept any Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.ER_Merchant__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ER_Do_not_publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_E_Shop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-Shop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ER_Financial_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Franchise_type__c</fullName>
        <label>Franchise type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Group_Of_Stores__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group of Stores</label>
        <referenceTo>ER_Group_of_Stores__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Invoicing_site__c</fullName>
        <formula>ER_Financial_Center__r.ER_Invoicing_Site__c</formula>
        <label>Invoicing site ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Latitude_Longitude__c</fullName>
        <label>Latitude Longitude</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ER_Meal_delivery_platform_affiliate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meal delivery platform affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_MerchantName__c</fullName>
        <formula>ER_Financial_Center__r.ER_Account_Name__r.Name</formula>
        <label>Merchant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Paper_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Paper Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Payment_site__c</fullName>
        <formula>ER_Financial_Center__r.ER_Payment_Site__c</formula>
        <label>Payment site ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Shopping_center__c</fullName>
        <label>Shopping center</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BUPicklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avion Shopping park Brno</fullName>
                </value>
                <value>
                    <fullName>Avion Shopping park Ostrava</fullName>
                </value>
                <value>
                    <fullName>Avion Shopping park Praha</fullName>
                </value>
                <value>
                    <fullName>Centro Zlín</fullName>
                </value>
                <value>
                    <fullName>Centrum Babylon</fullName>
                </value>
                <value>
                    <fullName>Centrum Černý Most</fullName>
                </value>
                <value>
                    <fullName>Centrum Olympia Teplice</fullName>
                </value>
                <value>
                    <fullName>Černá Růže</fullName>
                </value>
                <value>
                    <fullName>Dětský dům Shopping centre</fullName>
                </value>
                <value>
                    <fullName>Euro Park</fullName>
                </value>
                <value>
                    <fullName>Freeport Chvalovice</fullName>
                </value>
                <value>
                    <fullName>Galerie Butovice</fullName>
                </value>
                <value>
                    <fullName>Galerie Dvořák</fullName>
                </value>
                <value>
                    <fullName>Grand Pardubice</fullName>
                </value>
                <value>
                    <fullName>Hypermarket Carrefour Ústí nad Labem - Všebořice</fullName>
                </value>
                <value>
                    <fullName>IGY Centrum</fullName>
                </value>
                <value>
                    <fullName>Metropole Zličín</fullName>
                </value>
                <value>
                    <fullName>Myslbek</fullName>
                </value>
                <value>
                    <fullName>NC Borská Pole</fullName>
                </value>
                <value>
                    <fullName>NC Eden</fullName>
                </value>
                <value>
                    <fullName>NC Galerie Vaňkovka</fullName>
                </value>
                <value>
                    <fullName>NC Královo Pole</fullName>
                </value>
                <value>
                    <fullName>NC Pardubice</fullName>
                </value>
                <value>
                    <fullName>NC Průhonice</fullName>
                </value>
                <value>
                    <fullName>NC Stodůlky</fullName>
                </value>
                <value>
                    <fullName>Nisa Center Liberec</fullName>
                </value>
                <value>
                    <fullName>Obchodní dům Spektrum</fullName>
                </value>
                <value>
                    <fullName>OC Fontána</fullName>
                </value>
                <value>
                    <fullName>OC Futurum Brno</fullName>
                </value>
                <value>
                    <fullName>OC Futurum Hradec Králové</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Solution_Count__c</fullName>
        <label>Solution Count</label>
        <summaryFilterItems>
            <field>ER_Store_Line_Item__c.ER_Status__c</field>
            <operation>equals</operation>
            <value>Accept</value>
        </summaryFilterItems>
        <summaryForeignKey>ER_Store_Line_Item__c.ER_Store__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ER_Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Store_opening_date__c</fullName>
        <label>Store opening date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ER_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bakery</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pizzeria</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Snack</fullName>
                </value>
                <value>
                    <fullName>Hypermarket</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Convenience stores</fullName>
                </value>
                <value>
                    <fullName>Fast food</fullName>
                </value>
                <value>
                    <fullName>Cantine</fullName>
                </value>
                <value>
                    <fullName>Gas stations</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Discounter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ER_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZ_Store_reference__c</fullName>
        <label>Store reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ER_City__c</columns>
        <columns>ER_Merchant__c</columns>
        <columns>ER_Type__c</columns>
        <columns>ER_VAT_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hungary_Stores</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>HU</value>
        </filters>
        <label>Hungary Stores</label>
        <sharedTo>
            <roleAndSubordinates>HUN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRER01_Store_When_EShopFalse_NeedAddress</fullName>
        <active>true</active>
        <description>The address information must be filled for stores that are not E-shops (E-shop=False)</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
NOT(ER_E_Shop__c),
ISBLANK (ER_Street__c)
)</errorConditionFormula>
        <errorDisplayField>ER_Street__c</errorDisplayField>
        <errorMessage>The address information must be filled for stores that are not E-shops</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER02_Store_When_EShopTrue_NeedWebsite</fullName>
        <active>true</active>
        <description>The website information must be filled for E-shops</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c), 
ER_E_Shop__c=true,
ISBLANK(ER_Website_URL__c)
)</errorConditionFormula>
        <errorDisplayField>ER_Website_URL__c</errorDisplayField>
        <errorMessage>The website information must be filled for E-shops</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER03_Store_When_AMTrue_NeedAName</fullName>
        <active>true</active>
        <description>When Association member is set to true, Association Name has to be filled</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c), 
ER_Association_member__c,
ISBLANK(ER_Association_name__c)
)</errorConditionFormula>
        <errorDisplayField>ER_Association_name__c</errorDisplayField>
        <errorMessage>When Association member is set to true, Association Name has to be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER04_StoreOnlyMerchantFinancialCenter</fullName>
        <active>true</active>
        <description>Store can only be created on Merchant Financial Center</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
TEXT(ER_Financial_Center__r.ER_Type__c) = &quot;Client&quot;
)</errorConditionFormula>
        <errorMessage>Store can only be created on Merchant Financial Center</errorMessage>
    </validationRules>
</CustomObject>